# microsim

./: .gitignore  LICENSE  README.md
LivingCity/: CMakeLists.txt  LC_GLWidget3D.cpp  LC_GLWidget3D.h  LC_GLWidget3D_Shadows.cpp  LC_GLWidget3D_Shadows.h  LC_Layer.cpp  LC_Layer.h  LC_UrbanMain.cpp  LC_UrbanMain.h  LC_UrbanMain.ui  LC_UrbanMain_.qrc  LC_camera_3d.cpp  LC_camera_3d.h  LC_main.cpp  LivingCity.pro  calibration.py  command_line_options.ini  global.cpp  global.h  roadGraphB2018Loader.cpp  roadGraphB2018Loader.h
LivingCity/Geometry/: block.cpp  block.h  building.cpp  building.h  client_geometry.cpp  client_geometry.h  parcel.cpp  parcel.h  parcelBuildingAttributes.cpp  parcelBuildingAttributes.h  placeTypeInstances.cpp  placeTypeInstances.h  zone.cpp  zone.h
LivingCity/RoadGraph/: roadGraph.cpp  roadGraph.h  roadGraphEdge.cpp  roadGraphEdge.h  roadGraphVertex.cpp  roadGraphVertex.h
LivingCity/benchmarking/: runBenchmarks.py
LivingCity/data/: cityDefault.old  citySFO.cty  citySFO.old  cityTest.cty  globalScenarioValues_typicalValues.txt  simDefault.scn
LivingCity/data/Dynameq/: sf_final_advn.dqt  sf_final_ctrl.dqt  sf_final_prio.dqt  sf_final_ptrn.dqt  sf_final_scen.dqt
LivingCity/data/shaders/: lc_fragment.glsl  lc_fragment_sk.glsl  lc_vertex.glsl  lc_vertex_sk.glsl
LivingCity/misctools/: bounding_box.cpp  bounding_box.h  common.h  misctools.cpp  misctools.h  polygon_3D.cpp  polygon_3D.h
LivingCity/pandana_ch/contraction_hierarchies/src/POIIndex/: POIIndex.h
LivingCity/tests/: catch.hpp  lanemap_test.cpp  main_test.cpp  network_test.cpp  od_test.cpp  scenario_testing.cpp  systemTestSuite.py  traffic_simulator_test.cpp
LivingCity/tests/test_data/: all_paths_ch.txt  edges.csv  nodes.csv  od.csv
LivingCity/traffic/: agent.h  b18CUDA_trafficSimulator.cu  b18CUDA_trafficSimulator.h  b18CommandLineVersion.cpp  b18CommandLineVersion.h  b18EdgeData.h  b18GridPollution.h  b18TrafficDijkstra.h  b18TrafficJohnson.h  b18TrafficLaneMap.cpp  b18TrafficLaneMap.h  b18TrafficOD.cpp  b18TrafficOD.h  b18TrafficPerson.h  b18TrafficSP.cpp  b18TrafficSP.h  b18TrafficSimulator.cpp  b18TrafficSimulator.h  bEdgeIntersectionData.h  bTrafficConstants.h  bTrafficIntersection.cpp  bTrafficIntersection.h  config.h  cuda_simulator.cu  cuda_simulator.h  edge_data.h  lanemap.cpp  lanemap.h  network.cpp  network.h  od.cpp  od.h  roadGraphB2018Loader.cpp  roadGraphB2018Loader.h  simulation_interface.cpp  simulation_interface.h  traffic_simulator.cpp  traffic_simulator.h
LivingCity/traffic/sp/: graph.cc  graph.h
analysis/: berkeley.ipynb  combine_routes_and_people_outputs.ipynb  config.py  demo-updated.ipynb  distance_comparison_routes_vs_people.py  edges_nodes_processing.ipynb  microsim_od_process.ipynb  od_processing.ipynb  simple_network_testing.ipynb
analysis/.ipynb_checkpoints/: test_case_generator-checkpoint.ipynb
analysis/test2/: edges.csv  nodes.csv  od.csv
